[package]
name = "ipmn"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.1.0" }
clap = { version = "3.0.7", features = ["derive"] }
chrono = { version = "0.4.19" }
reqwest = { version = "0.11.9" }
telegram-bot = { version = "0.9.0", git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "1.15.0", features = ["full"] }