[package]
name = "ipmn"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.2.1" }
clap = { version = "3.2.16", features = ["derive"] }
chrono = { version = "0.4.20" }
reqwest = { version = "0.11.11" }
telegram-bot = { version = "0.9.0", git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = "0.1.58"
env_logger = "0.9.3"
log = "0.4.17"
