[package]
name = "ipmn"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1.58" }
bytes = { version = "1.2.1" }
clap = { version = "3.2.16", features = ["derive"] }
chrono = { version = "0.4.20" }
env_logger = { version = "0.9.3" }
log = { version = "0.4.17" }
reqwest = { version = "0.11.11" }
telegram-bot = { version = "0.9.0", git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "1.20.1", features = ["full"] }
